# uvc-util

./: CMakeLists.txt
cpp-version/: CMakeLists.txt
cpp-version/src/: UVCController.cpp  UVCController.hpp  UVCType.cpp  UVCType.hpp  UVCValue.cpp  UVCValue.hpp  main.cpp
objc-version/: CMakeLists.txt
